# wildlife-corridors-menorca

./: .gitignore  .nojekyll  README.md  _quarto.yml  pyproject.toml  robots.txt  search.json  sitemap.xml
data/: processed_dataset.parquet
data/experiments/: graph_model_solver_experiment.csv
data/experiments/summaries/: modelling_multi_species_alpha_0.25_summary.json  modelling_multi_species_alpha_0.5_summary.json  modelling_multi_species_alpha_0.75_summary.json
docs/: search.json
docs/src/: index.html
docs/src/sections/: graph_model_budgeted.html
documentation/: README.md  distilled_model.md  multi_species_model.md  running_scripts.md
src/: index.html  index.qmd
src/experiments/: alpha_runs.json  run_graph_model_solver_experiment.py  run_modelling_multi_specie_experiments.py
src/models/: graph_core.py  graph_model_gurobi_budgeted.py  graph_model_ortools_budgeted.py  gurobi_pipe_distances.py  gurobi_pipe_model_class.py  modelling_multi_specie.py  utils.py  visualization.py
src/models/gurobi/: __init__.py  common.py  constants.py  constraints.py  variables.py
src/models/ortools_pipe/: __init__.py  base_lp.py  constants.py  cpsat.py  main.py  reporting.py  solvers_lp.py
src/sections/: experiments.html  experiments.qmd  graph_model_budgeted.html  graph_model_budgeted.qmd  introduction.html  introduction.qmd  modelling_multi_specie.qmd  problem_statement_eda.qmd  references.bib
