[project]
name = "opt-menorca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "gurobipy>=12.0.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "ortools>=9.14.6206",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pyfonts>=1.2.0",
    "scikit-posthocs>=0.11.4",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
